# StoryForge

./: .gitignore  CMakeLists.txt
.github/workflows/: codeql.yml
resources/: conceptrailstyles.qss  manuscriptPanelStyles.qss  manuscriptpanelstyles.qss  navRailStyles.qss  navrailstyles.qss  premisestyles.qss  resources.qrc  stagerailstyles.qss  styles.qss
resources/styles/: conceptrailstyles.qss  manuscriptpanelstyles.qss  premisestyles.qss  storymenustyles.qss  styles.qss  topbarstyles.qss
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.h  meta.h
src/ui/components/: actsectionheader.cpp  actsectionheader.h  manuscriptpanel.cpp  manuscriptpanel.h  navrail.cpp  navrail.h  scenerow.cpp  scenerow.h  sidebar.cpp  sidebar.h
src/ui/components/buttons/: iconbutton.cpp  iconbutton.h
src/ui/components/editor/: editorlayout.cpp  editorlayout.h
src/ui/components/editor/concept/premise/: emptystatewidget.cpp  emptystatewidget.h  form.cpp  form.h  formgroup.cpp  formgroup.h
src/ui/components/main_ui/: actsectionheader.cpp  manuscriptpanel.cpp  storymenu.cpp
src/ui/components/nav/: actsectionheader.h  conceptrail.cpp  conceptrail.h  manuscriptpanel.cpp  manuscriptpanel.h  navpillwidget.cpp  navpillwidget.h  navrail.cpp  navrail.h  scenedata.h  scenerow.cpp  scenerow.h  sidebar.h  stagerail.cpp  stagerail.h  storymenu.cpp  storymenu.h  storymenurow.cpp  storymenurow.h  titlebar.cpp  titlebar.h  topbar.cpp  topbar.h
src/ui/utils/: graphicsutils.cpp  graphicsutils.h
src/ui/views/concept/: conceptview.cpp  conceptview.h
src/ui/views/concept/premise/: premise.cpp  premise.h  premisedata.h
